--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <div class="title">Oscar Prince</div>
+    <div class="title">O. Prince</div>
     <nav>
         <ul>
             <li routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="selected">Accueil</li>
