--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -10,7 +10,7 @@
 
         .title {
             font-size: 34px;
-            font-family: 'Mackinac Pro', sans-serif;
+            font-family: 'Merriweather', serif;
             font-weight: bold;
         }
 
@@ -47,6 +47,6 @@
         position: fixed;
         bottom: 0;
         padding: 30px 0;
-        font-family: 'Mackinac Pro', sans-serif;
+        font-family: 'Merriweather', serif;
     }
 }
