feat(projects): project design

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-    <span class="title">Hey ! Moi c'est Oscar Prince</span>
+    <span class="title">Bonjour ! Moi c'est Oscar Prince.</span>
     <div class="description">Je suis un développeur web passionné par l'informatique depuis une décennie, je conçois et développe des applications en mettant l'expérience utilisateur et son utilité en premier plan.</div>
 </div>
 <div class="photo">
