--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -48,5 +48,7 @@
         bottom: 0;
         padding: 30px 0;
         font-family: 'Merriweather', serif;
+        background-color: white;
+        width: 100%;
     }
 }
