--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -22,8 +22,19 @@
                 display: flex;
 
                 li {
-                    padding: 5px 15px;
-                    border-radius: 5px;
+                    margin: 5px 15px;
+                    display: inline-block;
+
+                    &:after {
+                        display:block;
+                        content: '';
+                        border-bottom: solid 2px #222222;  
+                        transform: scaleX(0);  
+                        transition: transform 250ms ease-in-out;
+                        transform-origin:  0% 50%;
+                    }
+
+                    &:hover:after { transform: scaleX(1); }
 
                     &:not(:first-child) {
                         margin-left: 10px;
@@ -35,9 +46,7 @@
                 }
 
                 .active {
-                    border: 1px solid #DBDBDB;
-                    box-shadow: 1px 1px 3px 0px #DBDBDB;
-                    // box-shadow: rgb(232, 232, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+                    font-weight: bold;
                 }
             }
         }
