feat(pages): remove bold on routerLink active

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -2,7 +2,7 @@
     <div class="title">O. Prince</div>
     <nav>
         <ul>
-            <li routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="selected">Accueil</li>
+            <li routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="selected">Accueil</li>
             <li routerLink="/projects" routerLinkActive="active">Projets</li>
             <li routerLink="/contact" routerLinkActive="active">Contact</li>
         </ul>
