--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -2,7 +2,7 @@
     max-width: 1080px;
     margin: 0 auto;
     display: block;
-    padding: 50px 0;
+    padding: 50px 15px;
 
     .header {
         display: flex;
@@ -46,7 +46,7 @@
                 }
 
                 .active {
-                    font-weight: bold;
+                    // font-weight: bold;
                 }
             }
         }
