--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,13 +1,12 @@
 :host {
     display: flex;
-    position: absolute;
-    top: 30%;
     
     .main {
         display: flex;
         flex-direction: column;
         justify-content: center;
         width: 100%;
+        margin: 75px 0;
 
         .title {
             font-size: 38px;
@@ -22,9 +21,12 @@
         align-items: center;
         justify-content: center;
 
-
         img {
             width: 250px;
         }
+    }
+
+    @media (max-width: 800px) {
+        flex-direction: column;
     }
 }
