feat(pages): put bold back on

--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -46,7 +46,7 @@
                 }
 
                 .active {
-                    // font-weight: bold;
+                    font-weight: bold;
                 }
             }
         }
