--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -2,7 +2,16 @@
     max-width: 1080px;
     margin: 0 auto;
     display: block;
-    padding: 50px 15px;
+
+    .wrapper {
+        position: relative;
+        min-height: 100vh;
+    }
+
+    .main-content {
+        padding-bottom: 2.5rem;
+        padding: 50px 15px;
+    }
 
     .header {
         display: flex;
@@ -53,11 +62,11 @@
     }
     
     footer {
-        position: fixed;
+        position: absolute;
         bottom: 0;
-        padding: 30px 0;
+        width: 100%;
+        height: 2.5rem;
         font-family: 'Merriweather', serif;
         background-color: white;
-        width: 100%;
     }
 }
