--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -64,7 +64,7 @@
     footer {
         position: absolute;
         bottom: 0;
-        width: 100%;
+        left: 15px;
         height: 2.5rem;
         font-family: 'Merriweather', serif;
         background-color: white;
