feat(console): console layout and base function

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,33 +1,38 @@
 :host {
-    display: flex;
+
+    .header {
+        display: flex;
     
-    .main {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: 100%;
-        margin: 75px 0;
-
-        .title {
-            font-size: 38px;
-            font-family: 'Merriweather', serif;
+        .main {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            width: 100%;
+            margin: 75px 0;
+    
+            .title {
+                font-size: 38px;
+                font-family: 'Merriweather', serif;
+            }
+        }
+    
+        .photo {
+            position: relative;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+    
+            img {
+                width: 250px;
+                box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+            }
+        }
+    
+        @media (max-width: 800px) {
+            flex-direction: column;
         }
     }
+    
 
-    .photo {
-        position: relative;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        img {
-            width: 250px;
-            box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-        }
-    }
-
-    @media (max-width: 800px) {
-        flex-direction: column;
-    }
 }
