--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,12 @@
-<div class="main">
-    <span class="title">Bonjour ! Moi c'est Oscar Prince.</span>
-    <div class="description">Je suis un développeur web passionné par l'informatique depuis une décennie, je conçois et développe des applications en mettant l'expérience utilisateur et son utilité en premier plan.</div>
+<div class="header">
+    <div class="main">
+        <span class="title">Bonjour ! Moi c'est Oscar Prince.</span>
+        <div class="description">Je suis un développeur web passionné par l'informatique depuis une décennie, je conçois et développe des applications en mettant l'expérience utilisateur et son utilité en premier plan.</div>
+    </div>
+    <div class="photo">
+        <img src="assets/moi2.png" alt="Photo Oscar Prince">
+    </div>
 </div>
-<div class="photo">
-    <img src="assets/moi2.png" alt="Photo Oscar Prince">
+<div class="console">
+    <console></console>
 </div>
