feat(console): auto scroll to bottom

--- a/src/app/pages/home/components/console/console.component.html
+++ b/src/app/pages/home/components/console/console.component.html
@@ -3,7 +3,7 @@
     <div class="dot orange"></div>
     <div class="dot green"></div>
 </div>
-<div class="console">
+<div #console class="console">
     <div *ngFor="let output of outputs" class="output">
         {{ output }}
     </div>
