--- a/src/app/pages/home/components/console/console.component.scss
+++ b/src/app/pages/home/components/console/console.component.scss
@@ -38,34 +38,8 @@
         width: 100%;
         color: white;
         border-radius: 0 0 5px 5px;
-
-        // .command {
-        //     display: flex;
-
-        //     @keyframes caret-flash {
-        //         from { opacity: 1; }
-        //         to { opacity: 0.1; }
-        //     }
-
-        //     .caret {
-        //         width: 10px;
-        //         height: 18px;
-        //         background-color: #fff;
-        //         animation: 0.6s alternate infinite caret-flash;
-        //     }
-
-        //     input {
-        //         width: 100%;
-        //         background: none;
-        //         border: none;
-        //         color: white;
-        //         font-size: 14px;
-    
-        //         &:focus {
-        //             outline: none;
-        //         }
-        //     }
-        // }
+        overflow-y: auto;
+        scroll-behavior: smooth;
 
         .user-input {
             display: flex;
