feat(console): display caret on user focus

--- a/src/app/pages/home/components/console/console.component.html
+++ b/src/app/pages/home/components/console/console.component.html
@@ -3,14 +3,14 @@
     <div class="dot orange"></div>
     <div class="dot green"></div>
 </div>
-<div #console class="console">
+<div (click)="focusInput()" #console class="console">
     <div *ngFor="let output of outputs" class="output">
         {{ output }}
     </div>
     <div class="user-input">
-        <input (keydown.enter)="submitInput()" [(ngModel)]="input" type="text">
+        <input (focus)="displayCaret = true" (blur)="displayCaret = false" #userInput (keydown.enter)="submitInput()" [(ngModel)]="input" type="text">
         <span>{{ userDisplay }}</span>
         <div class="display-text">{{ input }}</div>
-        <div class="caret"></div>
+        <div *ngIf="displayCaret" class="caret"></div>
     </div>
 </div>
