--- a/src/app/pages/home/components/console/console.component.scss
+++ b/src/app/pages/home/components/console/console.component.scss
@@ -40,6 +40,7 @@
         border-radius: 0 0 5px 5px;
         overflow-y: auto;
         scroll-behavior: smooth;
+        cursor: text;
 
         .user-input {
             display: flex;
