--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -58,4 +58,10 @@
             }
         }
     }
+
+    .loading {
+        display: flex;
+        justify-content: center;
+        margin: 50px 0;
+    }
 }
