--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -13,6 +13,6 @@
         <router-outlet></router-outlet>
     </div>
     <footer>
-        © 2023 Oscar Prince — Made with love and some coffee
+        © {{ currentYear }} Oscar Prince — Made with love and some coffee
     </footer>
 </div>
