feat(contact): send contact form to server

--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -65,6 +65,10 @@
                 font-size: 12px;
             }
 
+            .error-sending {
+                color: rgb(218, 31, 31);
+            }
+
             .actions {
                 align-self: flex-end;
 
