--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -32,5 +32,15 @@
         <div class="actions">
             <button type="submit">Envoyer</button>
         </div>
+        @if (sentSuccessfully) {
+            <div class="sent">
+                Votre message a bien été envoyé.
+            </div>
+        }
+        @if (errorWhileSending) {
+            <div class="error-sending">
+                Une erreur est survenue lors de l'envoi des données.
+            </div>
+        }
     </form>
 </div>
