fix(contact): response form for mobile

--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -89,4 +89,10 @@
         }
 
     }
+
+    @media screen and (max-width: 650px) {
+        .user-info {
+            flex-direction: column !important;
+        }
+    }
 }
