--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -17,6 +17,10 @@
         display: flex;
         justify-content: space-between;
 
+        .mobile-nav {
+            display: none;
+        }
+
         .title {
             font-size: 34px;
             font-family: 'Merriweather', serif;
@@ -67,5 +71,40 @@
         left: 15px;
         height: 2.5rem;
         font-family: 'Merriweather', serif;
+    }
+
+    .mobile-menu {
+        position: absolute;
+        z-index: 10;
+        background-color: white;
+        width: 100%;
+        top: 120px;
+        height: 150px;
+        border-bottom: 1px solid lightgray;
+        left: 0;
+        border-radius: 8px;
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            li {
+                font-size: 24px;
+            }
+        }
+    }
+
+    @media screen and (max-width: 500px) {
+        .mobile-nav {
+            display: block !important;
+        }
+
+        nav {
+            display: none;
+        }
     }
 }
