refactor(home): photo

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,7 +4,7 @@
         <div class="description">Je suis un développeur web passionné par l'informatique depuis une décennie, je conçois et développe des applications en mettant l'expérience utilisateur et son utilité en premier plan.</div>
     </div>
     <div class="photo">
-        <img src="assets/moi2.png" alt="Photo Oscar Prince">
+        <img src="assets/moi2.jpg" alt="Photo Oscar Prince">
     </div>
 </div>
 <div class="console">
