feat(home): social links and changed home text

--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -3,7 +3,7 @@
 </header>
 <div class="contact">
     <span class="info-text">
-        Je suis joignable soit par adresse e-mail : contact&#64;oscarprince.ch ou à travers le formulaire ci-dessous.
+        Je suis joignable soit par adresse e-mail contact&#64;oscarprince.ch ou à travers le formulaire ci-dessous.
     </span>
     <form [formGroup]="contactForm" (ngSubmit)="submitForm()">
         <div class="user-info">
