--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -15,6 +15,33 @@
                 font-family: 'Merriweather', serif;
             }
         }
+
+        .socials {
+            display: flex;
+
+            a {
+                &:not(:first-child) {
+                    margin-left: 5px;
+                }
+            }
+
+            .social {
+                border: 1px solid rgb(219, 219, 219);
+                background-color: unset;
+                border-radius: 5px;
+                cursor: pointer;
+                padding: 5px;
+                width: 30px;
+                height: 30px;
+                display: flex;
+                justify-content: center;
+
+                img {
+                    width: 20px;
+                    height: 20px;
+                }
+            }
+        }
     
         .photo {
             position: relative;
