--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -7,6 +7,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+            gap: 10px;
             width: 100%;
             margin: 75px 0;
     
