--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -35,31 +35,36 @@
                 display: flex;
 
                 li {
-                    margin: 5px 15px;
+                    margin: 0 5px;
                     display: inline-block;
+                    padding: 5px 10px;
+                    border-radius: 5px;
+                    transition: 0.1s;
 
-                    &:after {
-                        display:block;
-                        content: '';
-                        border-bottom: solid 2px #222222;
-                        transform: scaleX(0);  
-                        transition: transform 250ms ease-in-out;
-                        transform-origin:  0% 50%;
-                    }
+                    // &:after {
+                    //     display:block;
+                    //     content: '';
+                    //     border-bottom: solid 2px #222222;
+                    //     transform: scaleX(0);  
+                    //     transition: transform 250ms ease-in-out;
+                    //     transform-origin:  0% 50%;
+                    // }
 
-                    &:hover:after { transform: scaleX(1); }
+                    // &:hover:after { transform: scaleX(1); }
 
-                    &:not(:first-child) {
-                        margin-left: 10px;
-                    }
+                    // &:not(:first-child) {
+                    //     margin-left: 10px;
+                    // }
 
                     &:hover {
                         cursor: pointer;
+                        text-shadow: 0px 0px 0.5px black;
                     }
                 }
 
                 .active {
-                    font-weight: bold;
+                    text-shadow: 0px 0px 0.5px black;
+                    // background-color: rgb(232, 232, 232);
                 }
             }
         }
