refactor: webp format for home image and add source map in dev

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
         </div>
     </div>
     <div class="photo">
-        <img src="assets/moi2.jpg" alt="Photo Oscar Prince">
+        <img width="250" height="250" src="assets/me.webp" alt="Photo Oscar Prince">
     </div>
 </div>
 <div class="console">
