--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -30,10 +30,11 @@
             } 
         </div>
         <div class="actions">
-            <button type="submit">Envoyer</button>
+            <button [disabled]="loading" type="submit">Envoyer</button>
         </div>
         @if (sentSuccessfully) {
             <div class="sent">
+                <img src="assets/check.svg" alt="check">
                 Votre message a bien été envoyé.
             </div>
         }
