--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -13,6 +13,14 @@
             </div>
         </span>
         <span class="desc">{{ project.description }}</span>
+        <div class="techonolgies">
+            @for (technology of project.technologies; track $index) {
+                <div [ngStyle]="{'background-color': technology.color + '2b'}" class="technology">
+                    <img width="20" src="{{technology.icon_url}}" alt="{{technology.alt}}">
+                    <span>{{ technology.name }}</span>
+                </div>
+            }
+        </div>
     </div>
 </div>
 <div *ngIf="!projects || projects.length <= 0" class="loading">
