--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -53,6 +53,27 @@
                 color: grey;
             }
 
+            .techonolgies {
+                display: flex;
+                margin-top: 5px;
+
+                .technology {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    padding: 2px;
+                    border-radius: 5px;
+
+                    img {
+                        margin-right: 5px;
+                    }
+
+                    &:not(:first-child) {
+                        margin-left: 5px;
+                    }
+                }
+            }
+
             &:not(:first-child) {
                 margin-top: 25px;
             }
