--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -85,6 +85,14 @@
         margin: 50px 0;
     }
 
+
+    .error-container {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+
     @media (max-width: 800px) {
         .projects {
             grid-template-columns: 1fr;
