--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -3,23 +3,35 @@
 </header>
 <div class="projects">
     <div *ngFor="let project of projects" class="project">
-        <span class="title">
-            {{ project.title }}
-            <div [ngClass]="project.status.toString().toLowerCase()" class="status">
-                <span *ngIf="project.status.toString() === 'UNDER_DEVELOPMENT'">En cours de développement</span>
-                <span *ngIf="project.status.toString() === 'ARCHIVED'">Archivé</span>
-                <span *ngIf="project.status.toString() === 'ONLINE'">En ligne</span>
-                <span *ngIf="project.status.toString() === 'OFFLINE'">Hors ligne</span>
-            </div>
-        </span>
-        <span class="desc">{{ project.description }}</span>
-        <div class="techonolgies">
-            @for (technology of project.technologies; track $index) {
-                <div [ngStyle]="{'background-color': technology.color + '2b'}" class="technology">
-                    <img width="20" src="{{technology.icon_url}}" alt="{{technology.alt}}">
-                    <span>{{ technology.name }}</span>
+        <div class="top">
+            <span class="title">
+                {{ project.title }}
+                <div [ngClass]="project.status.toString().toLowerCase()" class="status">
+                    <span *ngIf="project.status.toString() === 'UNDER_DEVELOPMENT'">En cours de développement</span>
+                    <span *ngIf="project.status.toString() === 'ARCHIVED'">Archivé</span>
+                    <span *ngIf="project.status.toString() === 'ONLINE'">En ligne</span>
+                    <span *ngIf="project.status.toString() === 'OFFLINE'">Hors ligne</span>
                 </div>
-            }
+            </span>
+            <span class="desc">{{ project.description }}</span>
+        </div>
+        <div class="bottom">
+            <div class="links">
+                @if (project.url) {
+                    <a target="_blank" href="{{ project.url }}" class="link">
+                        <img width="20" src="assets/link.svg" alt="link">
+                        <span>Lien vers l'application</span>
+                    </a>
+                }
+            </div>
+            <div class="techonolgies">
+                @for (technology of project.technologies; track $index) {
+                    <div [ngStyle]="{'background-color': technology.color + '2b'}" class="technology">
+                        <img width="20" src="{{technology.icon_url}}" alt="{{technology.alt}}">
+                        <span>{{ technology.name }}</span>
+                    </div>
+                }
+            </div>
         </div>
     </div>
 </div>
