refactor(projects): reduce font size for links and technologies

--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -61,6 +61,7 @@
 
             .links {
                 display: flex;
+                font-size: 14px;
 
                 .link {
                     display: flex;
@@ -82,6 +83,7 @@
             .techonolgies {
                 display: flex;
                 margin-top: 5px;
+                font-size: 14px;
 
                 .technology {
                     display: flex;
