--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,9 @@
 <div class="header">
     <div class="main">
         <span class="title">Bonjour ! Moi c'est Oscar Prince.</span>
-        <div class="description">Je suis un développeur web passionné par l'informatique depuis maintenant une décennie. Que ce soit en front-end avec Angular ou en back-end avec Spring, je m'efforce toujours d'adopter les meilleures pratiques de développement et de rester à l'affût des dernières technologies pour offrir des expériences utilisateur exceptionnelles et des performances optimales. </div>
+        <p class="description">
+            Je suis un développeur web passionné par l'informatique depuis maintenant une décennie. Que ce soit en front-end avec Angular ou en back-end avec Spring, je m'efforce toujours d'adopter les meilleures pratiques de développement et de rester à l'affût des dernières technologies pour offrir des expériences utilisateur exceptionnelles et des performances optimales.
+        </p>
         <div class="socials">
             <a target="_blank" href="https://github.com/Penkie"><button class="social"><img src="assets/github.svg" alt="github"></button></a>
             <a target="_blank" href="https://www.linkedin.com/in/oscar-prince-3885721b5"><button class="social"><img src="assets/linkedin.svg" alt="linkedin"></button></a>
