--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -2,7 +2,7 @@
     header {
         display: flex;
         justify-content: center;
-        margin: 20px 0;
+        margin: 20px 0 40px 0;
 
         .title {
             font-size: 24px;
@@ -33,7 +33,7 @@
 
                 .status {
                     display: inline;
-                    font-size: 12px;
+                    font-size: 14px;
                     margin-left: 10px;
                     padding: 0 5px;
                     border-radius: 5px;
@@ -70,7 +70,7 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    padding: 2px;
+                    padding: 5px;
                     // text-decoration: none;
                     color: black;
                     border-radius: 5px;
@@ -92,7 +92,7 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    padding: 2px;
+                    padding: 5px 5px;
                     border-radius: 5px;
 
                     img {
