--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -2,7 +2,7 @@
     header {
         display: flex;
         justify-content: center;
-        margin: 20px 0;
+        margin: 20px 0 40px 0;
 
         .title {
             font-size: 24px;
