refactor(console): add label for input (accessibility)

--- a/src/app/pages/home/components/console/console.component.scss
+++ b/src/app/pages/home/components/console/console.component.scss
@@ -47,6 +47,10 @@
         .user-input {
             display: flex;
             align-items: center;
+            
+            .input-label {
+                display: none;
+            }
 
             input {
                 position: absolute;
