--- a/src/app/pages/home/components/console/console.component.html
+++ b/src/app/pages/home/components/console/console.component.html
@@ -8,7 +8,8 @@
         {{ output }}
     </div>
     <div class="user-input">
-        <input (focus)="displayCaret = true" (blur)="displayCaret = false" #userInput (keydown.enter)="submitInput()" [(ngModel)]="input" type="text">
+        <label class="input-label" for="user-input">user input</label>
+        <input name="user-input" (focus)="displayCaret = true" (blur)="displayCaret = false" #userInput (keydown.enter)="submitInput()" [(ngModel)]="input" type="text">
         <span>{{ userDisplay }}</span>
         <div class="display-text">{{ input }}</div>
         <div *ngIf="displayCaret" class="caret"></div>
