--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="photo">
-        <img width="250" src="assets/me.webp" alt="Photo Oscar Prince">
+        <img width="250" src="assets/moi3.webp" alt="Photo Oscar Prince">
     </div>
 </div>
 <div class="console">
