--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -11,14 +11,16 @@
     }
 
     .projects {
-        overflow: auto;
+        // overflow: auto;
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 10px;
+        gap: 15px;
+        margin-bottom: 25px;
 
         .project {
             padding: 25px;
-            border: 1px solid rgb(227, 227, 227);
+            // border: 1px solid rgb(227, 227, 227);
+            box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
             border-radius: 8px;
             display: flex;
             flex-direction: column;
@@ -81,6 +83,12 @@
                         margin-right: 5px;
                     } 
                 }
+            }
+
+            .bottom {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
             }
 
             .techonolgies {
