--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
     <div class="main-content">
         <div class="header">
-            <div class="title">O. Prince</div>
+            <div routerLink="/" class="title">O. Prince</div>
             <nav>
                 <ul>
                     <li routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Accueil</li>
