--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -25,6 +25,7 @@
             font-size: 34px;
             font-family: 'Merriweather', serif;
             font-weight: bold;
+            cursor: pointer;
         }
 
         nav {
