--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -22,6 +22,7 @@
 
             a {
                 text-decoration: none;
+                color: inherit;
 
                 &:not(:first-child) {
                     margin-left: 5px;
