--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -29,7 +29,7 @@
           <div class="techonolgies">
             @for (technology of project.technologies; track $index) {
               <div [ngStyle]="{'background-color': technology.color + '2b'}" class="technology">
-                <img width="20" src="assets/tech_icons/{{technology.icon_file_name}}" alt="{{technology.alt}}">
+                <img width="20" src="assets/tech_icons/{{technology.iconFileName}}">
                 <span>{{ technology.name }}</span>
               </div>
             }
